appId: com.apple.mobilesafari
---
- tapOn:
    point: "361,532"
- swipe:
    start: "200,700"
    end: "200,150"
    duration: 500
- swipe:
    start: "200,700"
    end: "200,150"
    duration: 500
