appId: ${APP_ID}
---
- runFlow:
    file: utils/sign-in.yaml
    env:
      EMAIL: mobile_buyer_do_not_edit@gumroad.com
      PASSWORD: password
- tapOn: ".*Mobile Test Product 1.*"
- extendedWaitUntil:
    visible: Mobile Test PDF
    timeout: 30000
- tapOn: Read
- extendedWaitUntil:
    visible: "Page [1-3] of 3"
    timeout: 30000
- swipe:
    start: "15%,50%"
    end: "85%,50%"
    duration: 300
- swipe:
    start: "15%,50%"
    end: "85%,50%"
    duration: 300
- swipe:
    start: "15%,50%"
    end: "85%,50%"
    duration: 300
- extendedWaitUntil:
    visible: Page 1 of 3
    timeout: 10000
- swipe:
    start: "85%,50%"
    end: "15%,50%"
    duration: 500
- extendedWaitUntil:
    visible: Page 2 of 3
    timeout: 10000
- assertNotVisible: Unable to load this PDF
