appId: ${APP_ID}
---
- runFlow:
    file: utils/sign-in.yaml
    env:
      EMAIL: mobile_buyer_do_not_edit@gumroad.com
      PASSWORD: password
- tapOn:
    text: ".*Mobile Test Product 1.*"
    waitToSettleTimeoutMs: 0
- pressKey: home
- tapOn:
    point: "1%,1%"
    repeat: 2
    delay: 31000
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: ".*Mobile Test Audio.*"
    timeout: 45000
- assertVisible: Mobile Test Video
- assertVisible: Mobile Test PDF
- assertNotVisible: "Unable to resolve data for blob|Something went wrong"
