appId: ${APP_ID}
---
- scrollUntilVisible:
    element: Login
- tapOn: Email
- inputText: ${EMAIL}
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: Next
      - inputText: ${PASSWORD}
      - tapOn:
          text: Never for This Website
          optional: true
- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: enter
      - inputText: ${PASSWORD}
- hideKeyboard
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: Not Now
          optional: true
- runFlow:
    when:
      platform: iOS
      visible: Password
    commands:
      - scrollUntilVisible:
          element: "^Login$"
      - tapOn: "^Login$"
- runFlow:
    when:
      platform: Android
      visible: Login
    commands:
      - tapOn: Login
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: Not Now
          optional: true
